# boost_python_ros

./: CMakeLists.txt  package.xml  setup.py
scripts/: generate_pkg_bindings.py
src/boost_python_ros/: code_generation.py
